# trenginePoC

./: .gitignore  skills-lock.json
seeding/crawl4ai/: .coverage  README.md  base_pipeline.py  cli.py  conftest.py  phase_pipeline.py  pipeline.py  pyproject.toml  requirements.txt  verify_results.py
seeding/crawl4ai/config/: __init__.py  canary_influencers.json  schema.py  seed_schema.py  settings.py
seeding/crawl4ai/config/categories/: all_categories.json  all_categories_table.md  categories_1-6.md  catergory7-12.md
seeding/crawl4ai/docs/: ARCHITECTURE.md  SEED_ARCHITECTURE.docx  SEED_BUSINESS_LOGIC.docx  business_rules.md
seeding/crawl4ai/results/: FITNESS_Fitness_Instagram_US.json  global_seeds.json  pipeline_output.json  serper_validation.json  summary_report.md
seeding/crawl4ai/results/2026-03-16_12.09am_UK/: report.md  seeds.json  unresolved_names.json
seeding/crawl4ai/results/2026-03-16_12.12am_UK/: report.md  seeds.json  unresolved_names.json
seeding/crawl4ai/results/2026-03-16_12.13am_UK/: report.md  seeds.json  unresolved_names.json
seeding/crawl4ai/results/2026-03-16_12.15am_UK/: report.md  seeds.json  unresolved_names.json
seeding/crawl4ai/results/audit/: 20260312T001623_single_url_Instagram_US.jsonl  20260312T001952_single_url_Instagram_US.jsonl  20260312T003322_single_url_Instagram_US.jsonl  20260312T003501_single_url_Instagram_US.jsonl  20260312T003552_single_url_Instagram_US.jsonl  20260312T003904_single_url_Instagram_US.jsonl  20260312T005220_single_url_Instagram_US.jsonl  20260312T012347_single_url_Instagram_US.jsonl  20260312T013737_FITNESS_Fitness_Instagram_US.jsonl  20260312T014515_FITNESS_Fitness_YouTube_US.jsonl  20260312T094203_single_url_Instagram_US.jsonl  20260312T095304_single_url_Instagram_US.jsonl  20260312T095815_single_url_Instagram_US.jsonl  20260312T100335_single_url_Instagram_US.jsonl  20260312T101954_single_url_Instagram_US.jsonl  20260312T102221_single_url_Instagram_US.jsonl  20260312T130355_test_live.jsonl  (+264 more)
seeding/crawl4ai/scripts/: scrape_ig_bios.py  test_nr_resolution.py  validate_serper.py
seeding/crawl4ai/tests/: EXHAUSTIVE_TEST_AUDIT.md  conftest.py
(+3725 files in other folders)
